refactor REST API

--- a/QpmServer/Default.html
+++ b/QpmServer/Default.html
@@ -59,7 +59,7 @@
                         <small>{{shell.Description}}</small>
                     </div>
                     <div class="shell-download" style="text-align:center;">
-                        <a href="api/shell/download/{{shell.Name}}"><small>Download</small></a>
+                        <a href="api/shells/download/{{shell.Name}}"><small>Download</small></a>
                     </div>
                 </div>
 
