--- a/QpmServer/Publish.html
+++ b/QpmServer/Publish.html
@@ -4,7 +4,7 @@
     <title>Upload Shell</title>
 </head>
 <body>
-<form name="uploadForm" enctype="multipart/form-data" method="post" action="api/shell/upload">
+<form name="uploadForm" enctype="multipart/form-data" method="post" action="api/shells">
     <div>
         <label for="uploadfile">Shell to Upload</label>
         <input type="file" id="uploadfile" name="uploadfile"/>
